# Sectorfile_Installer

./: .gitignore  VACC-Lithuania.py  debug.txt  installer.wxs  pyproject.toml  requirements-dev.txt  requirements.txt  version_info.txt
.github/workflows/: build-windows.yml
models/: user_config.py
scripts/: build-windows.bat  generate_asset_b64.py
services/: config_manager.py
src/: main.py
src/assets/: icon_b64.py  updater.bat  vacc_lithuania_darkgreen_transparent_b64.py  vacc_lithuania_white_transparent_b64.py
src/config/: settings.py
src/models/: __init__.py  enums.py  user_config.py
src/services/: __init__.py  app_update_manager.py  config_manager.py  installer.py  launcher.py  path_manager.py  profile_manager.py  sector_version_manager.py
src/ui/components/: __init__.py  base_dialog.py  error_dialogs.py  install_dialog.py  settings_dialog.py  update_dialogs.py
src/ui/views/: __init__.py  main_view.py
ui/components/: __init__.py  settings_dialog.py
ui/views/: main_view.py
