[project]
name = "sectorfile-installer"
version = "2.1.0"
description = "EuroScope sectorfile installer for vACC Lithuania"
authors = [{name = "Lithuania vACC"}]
requires-python = ">=3.10"
dependencies = [
    "flet>=0.25.0",
    "psutil>=7.0.0",
    "darkdetect>=0.8.0",
    "python-msi",
    "lnkcreator",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "certifi"
]

[tool.flet]
org = "com.vacclt"
product = "vACC Lithuania Sectorfile Installer"
company = "vACC Lithuania"
copyright = "vACC Lithuania, 2025"

[tool.flet.app]
path = "src"