[project]
name = "sectorfile-installer"
version = "2.1.5"
description = "EuroScope sectorfile installer for vACC Lithuania"
authors = [{ name = "Lithuania vACC" }]
requires-python = ">=3.10"
dependencies = [
    "flet==0.28.3",
    "psutil>=7.1.2",
    "darkdetect>=0.8.0",
    "python-msi",
    "lnkcreator",
    "requests>=2.32.5",
    "certifi>=2025.10.5",
    "packaging>=23.0"
]

[tool.flet]
org = "com.vacclt"
product = "vACC Lithuania Sectorfile Installer"
company = "vACC Lithuania"
copyright = "vACC Lithuania, 2025"

[tool.flet.app]
path = "src"